fix: drop labels on mobile

--- a/ui-components/src/navigation/ProgressNav.scss
+++ b/ui-components/src/navigation/ProgressNav.scss
@@ -102,7 +102,7 @@
 }
 
 .progress-nav__bar-item {
-  font-size: var(--bloom-font-size-2xs);
+  font-size: 0;
   padding-top: 0.5rem;
   padding-left: 0.125rem;
   position: relative;
